swagger - add info for multiple error response at swagger comments
